app/less/classes/overlay.less
.overlay-popup-subfield {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    // Prevent lyric scrolling from pushing app offscreen.
    overflow: hidden;

    // Centre the audio section.
    display: flex;
    flex-direction: column;
    align-items: center;

    .overlay-popup-block {
        position: relative;
        width: 100%;

        &.audio-popup-block {
            display: flex;
            justify-content: center;
        }

        &.main-popup-block {
            flex-grow: 1;
        }
    }

    .audio-popup-block, .audio-section {
        height: @menu-height;
    }

    .popup-transition-group {
        &.audio {
            display: flex;
            justify-content: center;
        }
    }

    .popup-wrapper.audio {
        flex-grow: 1;
        box-shadow: @popup-darker-box-shadow;
    }

    .popup-content-wrapper {
        box-sizing: border-box;

        &.annotation {
            box-shadow: @popup-box-shadow;
        }

        &.score, &.wiki, &.title {
            box-shadow: @popup-darker-box-shadow;
        }
    }
}

.is-desktop, .tablet-width {
    /**
     * In desktop and tablet, width of audio subfield in overlay is less than
     * width of screen.
     */
    .overlay-popup-subfield {
        .popup-wrapper.audio {
            overflow: hidden;
            border-radius: 15px;
        }
    }
}

.overlaid-annotation {
    .overlay-popup-subfield {
        .popup-content-wrapper {
            &.annotation {
                box-shadow: @popup-darker-box-shadow;
            }
        }
    }

    .popup-button-block {
        &.side-position {
            top: 50%;
            transform: translateY(-50%);
        }

        &.shadow {
            box-shadow: @popup-darker-box-shadow;
        }
    }
}

// Styling for overlaid audio in phone, which has timer in audio section.
.phone-width {
    &.overlay-shown {
        .overlay-popup-subfield {

            @banner-margin: 5px;

            .audio-section {
                align-items: flex-start;
                height: @app-icon-diameter * 2 + @banner-margin;
            }

            .audio-buttons-block, .audio-timer-block, .audio-banner-block {
                height: @app-icon-diameter;
            }

            .audio-buttons-block {
                max-width: 300px; // Also arbitrary.
            }

            .audio-timer-block {
                flex-grow: 1;
                display: flex;
                justify-content: center;
                align-items: center;
                margin-right: @audio-block-padding;

                font-size: 1.75em;
            }

            .audio-banner-block {
                position: absolute;
                bottom: 0;
                width: 100%;
            }

            .audio-display-block {
                display: none;
            }
        }
    }
}

.is-desktop {
    &.overlay-shown {
        .menu-field {
            top: -@menu-height;
        }

        .audio-banner-custom-subfield {
            top: -@menu-height - @audio-banner-custom-subfield-height - 2 * @audio-banner-custom-subfield-padding;
        }
    }
}

.phone-width {
    &.overlay-shown {
        .audio-banner-custom-subfield {
            top: -@menu-height - @audio-banner-custom-subfield-height - 2 * @audio-banner-custom-subfield-padding;
        }
    }
}

